Prime Classi Test View e aggiornamento pom per testFx