@@ -68,6 +68,21 @@
             <version>8.0.33</version>
         </dependency>
 
+
+        <!-- TestFx -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Mockito core -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -118,15 +133,25 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
-                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
-<!--                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>-->
+                    <argLine>
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        @{argLine} -Dnet.bytebuddy.experimental=true
+                    </argLine>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.14</version> <executions>
+                <version>0.8.14</version>
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>it/polimi/eventolibri/View/**</exclude>-->
+<!--                        <exclude>it/polimi/eventolibri/Network/**</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+                <executions>
                 <execution>
                     <id>prepare-agent</id>
                     <goals>
@@ -138,6 +163,13 @@
                     <phase>test</phase> <goals>
                     <goal>report</goal>
                 </goals>
+<!--                    <configuration>-->
+<!--                        <excludes>-->
+<!--                            <exclude>it/polimi/eventolibri/View/**</exclude>-->
+<!--                            <exclude>it/polimi/eventolibri/Network/**</exclude>-->
+<!--                        </excludes>-->
+<!--                        &lt;!&ndash; eventuali regole di soglia &ndash;&gt;-->
+<!--                    </configuration>-->
                 </execution>
             </executions>
             </plugin>
